applicationStart removed resetLoading removed .gradle ignored